# otus_cpp_hello_world

./: .travis.yml  CMakeLists.txt  README.md  conanfile.txt  lib.cpp  lib.h  main.cpp  test_version.cpp
